# Data_Epic_DE_Bootcamp

./: README.md
weather_api/: pyproject.toml
weather_api/src/: main.py
weather_api/src/app/: get_weather_api.py  load_to_gsheet.py  scrape_weather_api.py
